# veillePQC

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-veille.yml
config/: sources.yaml
src/veille_pqc/: classification.py  config_loader.py  main.py  models.py  reporting.py  scoring.py  storage.py
src/veille_pqc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/veille_pqc/collectors/: rss.py  webpage.py
src/veille_pqc/dashboard/: app.py
src/veille_pqc/notifiers/: emailer.py
